<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.yasuenag</groupId>
    <artifactId>runobjfile</artifactId>
    <version>0.1.0</version>
    <packaging>jar</packaging>

    <name>runobjfile</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mainClass>com.yasuenag.garakuta.ffm.objfile.RunObjFile</mainClass>
        <imageName>${project.artifactId}-${project.version}</imageName>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>net.fornwall</groupId>
            <artifactId>jelf</artifactId>
            <version>0.9.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                    </compilerArgs>
                    <enablePreview>true</enablePreview>
                    <debug>true</debug>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>gcc</executable>
                            <arguments>
                                <argument>-c</argument>
                                <argument>-fPIC</argument>
                                <argument>-o</argument>
                                <argument>${project.build.directory}/test.o</argument>
                                <argument>${project.basedir}/src/main/native/test.c</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>run</id>
                        <phase>exec</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${java.home}/bin/java</executable>
                            <workingDirectory>${project.build.directory}</workingDirectory>
                            <arguments>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>--enable-preview</argument>
                                <argument>--enable-native-access=ALL-UNNAMED</argument>
                                <argument>${mainClass}</argument>
                                <argument>${project.build.directory}/test.o</argument>
                                <argument>mul2</argument>
                                <!-- <argument>mul3</argument> -->
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
